--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "/"
+        "destination": "/build/index.html"
       }
     ]
   }
